--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <h2>Fuzzy-REG</h2>
         <h3 class="description">We, fyTeam, made a program that calculates the percentage of radiator heating<br>according to several input values, calculating the result using fuzzy logic.<br>Feel free to try it out below!</h3>
-        <h4>Made by: Viktor Uhrynchuk, Anatolii Vasylov, Oleh Pelypenko, Volodymyr Porokh, Volodymyr Mishchuk</h3>
+        <h4>Made by:<br>Viktor Uhrynchuk - website development, panning<br>Anatolii Vasylov - programming<br>Oleh Pelypenko - analytics<br>Volodymyr Porokh - analytics<br>Volodymyr Mishchuk - head of the company, presentation</h3>
     </header>
     <iframe src="https://ui-skfuzzy.streamlit.app/?embedded=true"></iframe>
 </body>
